Excuted an Js Events

--- a/MY FIRST js.html
+++ b/MY FIRST js.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js explanation</title>
+    <script type="text/javascript" src="javascript.js"></script>
+    <!-- external javascript -->
 </head>
 <body>
     <!-- <script>
@@ -13,9 +15,9 @@
 
     </script> -->
     <h1 onclick="ChangeText(this)">this is my starting javascript page</h1>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.alert(5+5);
-    </script>
+    </script> -->
  
     
 </body>
